# webtags

./: .gitignore  AGENTS.md  CHANGELOG.md  ENCRYPTION_DESIGN.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY_AUDIT.md  TEST_REPORT.md  justfile  worktree-secrets
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  release-with-deploy-key.yml.example  release-with-pr.yml.example  release.yml
docs/: BROWSER_SETUP.md  DEVELOPMENT.md  HOMEBREW_TOKEN_SETUP.md  README.md
docs/architecture/: OVERVIEW.md
docs/security/: SECURITY_SUMMARY.md
docs/workflows/: GIT.md  PRE_PUSH.md  TESTING.md
extension/: jest.config.js  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  webpack.config.js
extension/src/: background.ts  bookmarkConverter.ts  messaging.ts  types.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/tests/e2e/: native-host.spec.ts  oauth.spec.ts
native-host/: Cargo.toml  install.sh
native-host/manifests/: chrome-manifest.json  firefox-manifest.json
native-host/src/: encryption.rs  git.rs  git_url.rs  github.rs  lib.rs  main.rs  messaging.rs  storage.rs
native-host/tests/: integration_tests.rs  test_touchid.rs
schemas/: bookmarks-schema.json
scripts/: copy-worktree-secrets.sh  security-audit.sh  setup-manifests.sh  symlink-claude.sh
