[package]
name = "webtags-host"
version = "0.1.0"
edition = "2021"
authors = ["WebTags Contributors"]
description = "Native messaging host for WebTags browser extension"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git operations
git2 = { version = "0.18", features = ["https", "ssh"] }

# HTTP client for GitHub API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Secure credential storage
keyring = "2.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# JSON schema validation
jsonschema = "0.17"

# Logging
log = "0.4"
env_logger = "0.11"

# Directory utilities
dirs = "5.0"

# URL parsing and validation
url = "2.5"

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# macOS Security Framework (Touch ID, Keychain)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"
core-foundation = "0.9"

[lib]
name = "webtags_host"
path = "src/lib.rs"

[[bin]]
name = "webtags-host"
path = "src/main.rs"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
mockall = "0.12"
wiremock = "0.6"

# Lint configuration - maximum strictness for production code
[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
# Pedantic lints - best practices
pedantic = { level = "warn", priority = -1 }

# High-value restriction lints
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
# Note: unwrap_used/expect_used are too strict for tests, handle in CI

# Allow some pedantic lints that create noise
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_async = "allow"  # Handlers have uniform async signatures

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
